# AuditFlow-Chat

./: README.md  auditflow_readme.md  main.py  pyproject.toml
database/: database.py  models.py  queries.py  schema.py
docs/: general_ledger_2024.xlsx  general_ledger_2025.xlsx  trial_balance_2024.xlsx  trial_balance_2025.xlsx
voice/: audio.py
workflow/: AuditFlow Data Ingestion.json  AuditFlow Whatsapp.json
